--- a/src/Styles/Apropos.css
+++ b/src/Styles/Apropos.css
@@ -7,7 +7,6 @@
   transform: translateY(-8px);
   box-shadow: 0 10px 20px rgba(0,0,0,0.1);
 }
-.apropos{
-   
-  padding: 0rem 0rem 3rem 0rem;
+.top{
+    margin: 400px;
 }
